# nwsd

./: Cargo.toml  README.md
src/: args.rs  display.rs  main.rs
src/commands/: mod.rs  test.rs  version.rs
src/daemon/: config.rs  init.rs  mod.rs  run.rs
src/weather/: weather.rs
