[package]
name = "nwsd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "6.0.0"
efcl = "0.1.3"
notify-rust = "4.11.4"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.135"
structopt = "0.3.26"
toml = "0.8.19"
